--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,2 +1,5 @@
 @import "base/reset";
+@import "components/common";
+@import "components/entries";
+@import "components/game";
 @import "components/media";
