--- a/src/scss/components/_entries.scss
+++ b/src/scss/components/_entries.scss
@@ -74,3 +74,52 @@
     display: none;
   }
 }
+
+.game-mode {
+  &::before {
+    content: '';
+    display: block;
+    height: 1px;
+    margin: 8px 0;
+    background-color: gray;
+  }
+
+  &__wrapper {
+    display: flex;
+    padding: 10px;
+  }
+
+  &__mode {
+    width: 50%;
+
+    &:first-child {
+      margin-right: 10px;
+    }
+  }
+
+  &__input {
+    display: none;
+  }
+
+  &__label {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+    cursor: pointer;
+    color: grey;
+    text-align: center;
+    border-radius: 5px;
+  }
+
+  &__input:checked + &__label {
+    background-color: #1a1aff;
+    color: #ccc;
+  }
+
+  &__input:not(:checked):hover + &__label {
+    background-color: #bfbfbf;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, .3);
+  }
+}
