--- a/src/scss/components/_game.scss
+++ b/src/scss/components/_game.scss
@@ -46,7 +46,7 @@
     height: 75%;
     margin: 0 auto;
     border-radius: 50%;
-    border: 1px solid;
+    border: 1px solid #000;
   }
 
   &__cross {
