Implement logic to select game mode and side; Add highlighting of winning squares at the end of the game

--- a/src/scss/components/_common.scss
+++ b/src/scss/components/_common.scss
@@ -20,6 +20,10 @@
   border-bottom: 1px solid grey;
   color: grey;
 
+  &--main {
+    display: block;
+  }
+
   &--unbordered {
     border-bottom: none;
   }
