--- a/src/scss/components/_entries.scss
+++ b/src/scss/components/_entries.scss
@@ -1,4 +1,5 @@
 .entry {
+  display: none;
   padding: 15px;
 
   &__input {
@@ -19,46 +20,22 @@
   }
 }
 
-.btn-mode {
-  width: 100%;
-  padding: 10px 0;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  font-size: 16px;
-  text-align: center;
-  color: #fff;
-  background-color: blue;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-
-  &:hover {
-    background-color: #00c;
-  }
-}
-
 .sides {
   display: none;
+  margin-bottom: 12px;
 
-  &__header {
-    margin: 0;
-    font-weight: 300;
-    color: gray;
-    text-align: center;
-    text-transform: uppercase;
-  }
-
-  &__table {
+  &__wrapper {
+    display: flex;
     width: 250px;
     height: 125px;
     margin: 0 auto;
-    border-collapse: separate;
-    border-spacing: 20px 15px;
   }
 
   &__side {
-    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
     cursor: pointer;
 
     &:hover {
@@ -68,25 +45,27 @@
     &:active {
       box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
     }
-  }
 
-  &__input {
-    display: none;
+    &:first-child {
+      margin-right: 10px;
+    }
   }
 }
 
-.game-mode {
+.modes {
+  display: none;
+
   &::before {
     content: '';
     display: block;
     height: 1px;
-    margin: 8px 0;
+    margin-bottom: 5px;
     background-color: gray;
   }
 
   &__wrapper {
     display: flex;
-    padding: 10px;
+    padding: 5px 10px 10px;
   }
 
   &__mode {
@@ -107,10 +86,10 @@
     width: 100%;
     height: 100%;
     padding: 5px;
-    cursor: pointer;
+    border-radius: 5px;
     color: grey;
     text-align: center;
-    border-radius: 5px;
+    cursor: pointer;
   }
 
   &__input:checked + &__label {
