--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import "base/reset";
 @import "components/common";
 @import "components/entries";
+@import "components/buttons";
 @import "components/game";
 @import "components/media";
