--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -1,1 +1,40 @@
 @import "../base/breakpoints";
+
+@media screen and (max-width: 400px) {
+  body {
+    background-color: #ccc;
+  }
+
+  .wrapper {
+    width: 300px;
+    border: none;
+  }
+
+  .board,
+  .winner {
+    height: 270px;
+  }
+
+  .sides {
+    &__wrapper {
+      width: 190px;
+      height: 90px;
+    }
+  }
+
+  .modes {
+    &__wrapper {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    &__mode {
+      width: 100%;
+
+      &:first-child {
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
