--- a/src/scss/components/_game.scss
+++ b/src/scss/components/_game.scss
@@ -4,6 +4,7 @@
 }
 
 .points {
+  display: none;
   width: 100%;
   margin-bottom: 15px;
   border-collapse: collapse;
@@ -21,6 +22,13 @@
       width: 20%;
     }
   }
+}
+
+.info {
+  display: none;
+  margin-bottom: 15px;
+  text-align: center;
+  font-weight: 300;
 }
 
 .board {
